@@ -12,7 +12,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - Adicionado qualidade para plantações: Plantas Precárias, Plantas e Plantas Premium. Plantas premium e precárias tem uma mudança em seu preço de 30%.
 - Adicionado categorias para as plantações de fazendinha: Grão, Raiz, Vegetal, Fruta, Fruta Nobre e Especial.
 - Criado o comando `/fazendinha administrar`, que integra gerenciar campos, silo e feira.
+- Criado o comando `/fazendinha feira administrar`, que é um atalho para administrar a feira, disponível no `/fazendinha administrar`.
 - Criado o comando `/fazendinha feira trocas`: faça troca de plantas na feira por estrelinhas e/ou fertilizantes. 
+- Agora é possível atualizar o valor de um item anunciado na feira no `/fazendinha administrar` - Sugerido por 
 
 ## Changed
 
